fix scrollbar breaking layout issue

--- a/app/assets/stylesheets/activities.css.scss
+++ b/app/assets/stylesheets/activities.css.scss
@@ -1,7 +1,7 @@
 .activities-list {
   .list-item {
 
-    &.small .item { width: 570px; }
+    &.small .item { width: 562px; }
 
     .trackable { font-weight: bold; }
 
